# RobotFirmware

./: .gitignore  .gitmodules  build.sh  cameraStream.sh  cloc.sh  run.sh  setup.sh
cpp-hardware-control/: CMakeLists.txt
cpp-hardware-control/src/: main.cpp  uvc.cpp
cpp-hardware-control/src/SCServo/: INST.h  SCS.cpp  SCS.h  SCSCL.cpp  SCSerial.cpp  SCSerial.h  SCServo.h  SComms.cpp  SComms.h  SMS_STS.cpp  SMS_STS.h  STS.cpp  STS.h  ServoClass.cpp  ServoClass.h  structure.txt
cpp-hardware-control/src/Utils/: Utils.cpp  Utils.h
node-decision-layer/: .eslintrc  index.ts  package.json  tsconfig.json
nodejs-main-process/: .eslintrc  .prettierrc.js  index.ts  package.json  tsconfig.json
nodejs-main-process/jsons/: sittingPosition.json  standing.json
nodejs-main-process/src/: backboneRequestHandler.ts  commands.ts  handlers.ts  masterHandler.ts  parsers.ts  processMsgHandler.ts  requestHandler.ts  types.ts  utils.ts
nodejs-main-process/src/handlers/: backboneRequestHandler.ts  baseUartRequestHandler.ts  peripheryRequestHandler.ts  pythonRequestHandler.ts
python-ml-control/: detect_test.py  main.py  requirements-lock.txt  requirements.txt  zmq-test.py
